# pzserver

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .setup_dev.sh  LICENSE  README.md  constraints-rubin-latest-daily.txt  constraints-rubin-latest.txt  constraints-rubin-recommended.txt  dev.ipynb  dev.py  environment.yml  pyproject.toml  pz_server_tutorial.html  pz_server_tutorial.ipynb  requirements-dev.txt  requirements.txt  setup.py  tutorial.ipynb
.bk/: bk.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: build-documentation.yml  linting.yml  lowest-versions.yml  pre-commit-ci.yml  publish-to-pypi.yml  rubin-latest-compatibility.yml  rubin-latest-daily-compatibility.yml  rubin-recommended-compatibility.yml  smoke-test.yml  testing-and-coverage.yml
docs/: .buildinfo  Makefile  conf.py  genindex.html  index.html  index.rst  installation.html  installation.rst  modules.rst  nbs.html  nbs.rst  notebooks.rst  objects.inv  py-modindex.html  pz_server.rst  requirements.txt  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/pzserver/: catalog.html  communicate.html  core.html  pipeline.html  process.html  product.html  upload.html
docs/_sources/: index.rst.txt  installation.rst.txt  nbs.rst.txt
docs/_sources/autoapi/: index.rst.txt
docs/_sources/autoapi/pzserver/: index.rst.txt
docs/_sources/notebooks/rst/: 1_specz_catalogs.rst.txt  pzserver_tutorial.rst.txt
docs/_static/: documentation_options.js
docs/autoapi/: index.html
docs/autoapi/pzserver/: index.html
docs/autoapi/pzserver/catalog/: index.html
docs/autoapi/pzserver/communicate/: index.html
docs/autoapi/pzserver/core/: index.html
docs/autoapi/pzserver/pipeline/: index.html
docs/autoapi/pzserver/process/: index.html
docs/autoapi/pzserver/product/: index.html
docs/autoapi/pzserver/upload/: index.html
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/usage/: functions.doctree  installation.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/usage/: functions.rst.txt  installation.rst.txt
docs/html/_static/: basic.css  documentation_options.js  searchtools.js
docs/html/_static/js/: theme.js
docs/html/usage/: functions.html  installation.html
docs/notebooks/: 0_introduction.ipynb  1_specz_catalogs.ipynb  2_training_sets.ipynb  example.csv  example.html  example.ipynb  intro_notebook.html  intro_notebook.ipynb  intro_notebook.rst  public-specz-compilation.ipynb  public-training-set-des-dr2.ipynb  pzserver_tutorial.html  pzserver_tutorial.ipynb  rsp_instructions.md  upload_example.html
docs/notebooks/examples/: upload_example.html
docs/notebooks/images/: Untitled.ipynb
docs/notebooks/qa_notebooks/: ztrue_tract_3833.ipynb
docs/notebooks/qa_notebooks/desi_dr1_qa_from_disk/: DESI-DR1-QA-Notebook-NO-CODE.html  DESI-DR1-QA-Notebook-WITH-CODE.html  DESI-DR1-QA-Notebook.ipynb  desi_qa_env.yaml  desi_qa_instructions.md
docs/notebooks/report_hats/: README.md  environment.yaml
docs/notebooks/report_hats/hats_import/: 2MASS_HATS_import.ipynb  DES_DR2_HATS_import.ipynb  DP01_truth_HATS_import.ipynb  DP01_truth_random_sample_HATS_import.ipynb  DP02_object_HATS_import.ipynb  DP02_skinny_HATS_import.ipynb  GAIA_DR3_HATS_import.ipynb
docs/notebooks/report_hats/margin_cache/: 2MASS_margin_cache.ipynb  2MASS_margin_cache.py  2MASS_margin_cache.sbatch  DES_DR2_margin_cache.ipynb  DES_DR2_margin_cache.py  DES_DR2_margin_cache.sbatch  DP01_truth_random_sample_margin_cache.ipynb  DP02_skinny_margin_cache.ipynb
docs/notebooks/report_hats/x_matching/: 2MASS-vs-DES-DR2-crossmatching.py  2MASS-vs-DES-DR2-crossmatching.sbatch  2MASS_VS_DES_DR2_x_matching.ipynb  DP02_skinny_VS_DP01_truth_random_sample_x_matching.ipynb  GAIA-DR3-vs-DES-DR2-crossmatching.py  GAIA-DR3-vs-DES-DR2-crossmatching.sbatch  GAIA_DR3_VS_DES_DR2_x_matching.ipynb
docs/notebooks/rst/: 0_introduction.html  0_introduction.rst  1_specz_catalogs.html  1_specz_catalogs.rst  2_training_sets.html  2_training_sets.rst  pzserver_tutorial.html  pzserver_tutorial.rst
docs/notebooks/templates/: desi_edr_galaxies.ipynb  public-specz-compilation.ipynb  public-training-set-des-dr2.ipynb
docs/pre_executed/: README.md
docs/source/: conf.py  index.rst
docs/source/usage/: installation.rst
nb/: pz_server_tutorial.ipynb
notebooks/: pz_server_tutorial.html  pz_server_tutorial.ipynb  pz_tsm_tutorial.ipynb
pz_server/: __init__.py  api.py  bkp_api.py  bkp_core.py  catalog.py  core.py  dev.ipynb  dev.py  plots.py  pz_plots.py  specz_catalog.py
pz_tsm/: core.py
pzserver/: api.py  catalog.py
src/: .pylintrc
src/pzserver/: __init__.py  catalog.py  communicate.py  core.py  pipeline.py  process.py  product.py  upload.py
src/pzserver/process/: __init__.py  csc.py  tsm.py
tests/: .pylintrc  test_get_products.py
tests/data/: product_types.json  products.json  releases.json
tests/pzserver/: test_catalog.py  test_communicate.py  test_core.py  test_download.py  test_example_module.py  test_get_product.py  test_packaging.py  test_pipeline.py  test_process.py  test_product.py  test_upload.py
tutorial/: tutorial.ipynb
(+9 files in other folders)
