[project]
name = "pzserver"
license = {file = "LICENSE"}
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "LIneA", email = "itteam@linea.org.br" }
]
requires-python = ">=3.8,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "deprecated",
    "numpy>=1.23",
    "pandas>=1.2.0",
    "requests>=2.23.0",
    "astropy>=5.0.0",
    "matplotlib>=3.6.0",
    "tables_io>=0.7.9",
    "Jinja2>=3.1.2",
    "ipython>=8.5.0",
    "h5py>=3.8.0",
]

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "pre-commit", # Used to run checks before finalizing a git commit
    "sphinx>=7.0.0,<8", # Used to automatically generate documentation
    "sphinx_rtd_theme>=1.2.0,<2", # Used to render documentation
    "sphinx-autoapi>=3.0.0,<4", # Used to automatically generate api documentation
    "pylint", # Used for static linting of files
    # if you add dependencies here while experimenting in a notebook and you
    # want that notebook to render in your documentation, please add the
    # dependencies to ./docs/requirements.txt as well.
    "ipykernel", # Support for Jupyter notebooks
    "nbconvert", # Needed for pre-commit check to clear output from Python notebooks
    "nbsphinx", # Used to integrate Python notebooks into Sphinx documentation
    "ipython", # Also used in building notebooks into Sphinx
    "jupyterlab",
    "matplotlib", # Used in sample notebook intro_notebook.ipynb
]

[build-system]
requires = [
    "setuptools>=66", # Used to build and package the Python project
    "setuptools_scm>=8", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pzserver/_version.py"
