[project]
name = "pzserver"
license = {file = "LICENSE"}
dynamic = ["version", "dependencies", "optional-dependencies"]
readme = "README.md"
authors = [
    { name = "LIneA", email = "itteam@linea.org.br" }
]
requires-python = ">=3.7,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = [
    "setuptools>=66", # Used to build and package the Python project
    "setuptools_scm>=8", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pzserver/_version.py"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}
