[project]
name = "pzserver"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "dependencies", "optional-dependencies"]
readme = "README.md"
authors = [
    { name = "LIneA", email = "itteam@linea.org.br" }
]
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
"Source Code" = "https://github.com/linea-it/pzserver"

[build-system]
requires = [
    "setuptools>=66", # Used to build and package the Python project
    "setuptools_scm>=8", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pzserver/_version.py"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear: likely bugs and footguns
    "E4",  # pycodestyle import and module-level issues
    "E7",  # pycodestyle statement structure issues
    "E9",  # pycodestyle runtime/syntax errors
    "F",   # pyflakes: undefined names, unused imports, bad bindings
    "I",   # import sorting
    "UP",  # pyupgrade for supported Python versions
]

[tool.coverage.run]
omit = ["src/pzserver/_version.py"]
